# tirex

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements_py24.yaml  requirements_py26.yaml
examples/: air_passengers.csv  loop_seattle_5T_example.csv  quick_start_tirex.ipynb  trading.ipynb  util_plot.py
examples/chronos_zs/: chronos_zs.ipynb  requirements.txt
examples/gifteval/: data_fixed_new_numpy.py  dataset_properties.json  gift_eval_utils.py  gifteval.ipynb  requirements.txt
src/tirex/: base.py
src/tirex/api_adapter/: forecast.py  gluon.py  standard_adapter.py
src/tirex/models/: components.py  mixed_stack.py  predict_utils.py  tirex.py
tests/: test_forecast_adapter.py  test_standard_adapter.py
